tests/baselines/reference/FunctionPropertyAssignments5_es6.errors.txt
error TS2318: Cannot find global type 'IterableIterator'.
tests/cases/conformance/es6/functionPropertyAssignments/FunctionPropertyAssignments5_es6.ts(1,13): error TS2304: Cannot find name 'foo'.


!!! error TS2318: Cannot find global type 'IterableIterator'.
==== tests/cases/conformance/es6/functionPropertyAssignments/FunctionPropertyAssignments5_es6.ts (1 errors) ====
    var v = { *[foo()]() { } }
                ~~~
!!! error TS2304: Cannot find name 'foo'.